--- a/frontend/dad-jokes/src/app/home/home.component.html
+++ b/frontend/dad-jokes/src/app/home/home.component.html
@@ -1,3 +1,16 @@
 <section class="home">
-  <h1>Dad Jokes</h1>
+  <h1 class="title">Dad Jokes</h1>
+  <div class="new-joke">
+    <p class="p-joke">
+      <app-jokes></app-jokes>
+    </p>
+    <div class="btn">
+      <button class="save" type="button">Save</button>
+      <button class="new" type="button">New Joke</button>
+    </div>
+  </div>
+  <h2 class="title">Favourites Jokes</h2>
+  <div class="fav">
+    <app-joke-list></app-joke-list>
+  </div>
 </section>
