--- a/frontend/dad-jokes/src/app/jokes/jokes.component.css
+++ b/frontend/dad-jokes/src/app/jokes/jokes.component.css
@@ -1,1 +1,55 @@
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+}
 
+.container-jokes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 80%;
+}
+
+.joke {
+  align-items: center;
+  font-size: 1.7rem;
+}
+
+/* --------- BUTTONS CONTAINER --------- */
+
+.btn {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  align-items: center;
+  height: 20%;
+}
+
+button {
+  width: 200px;
+  height: 50px;
+  font-size: 1.5rem;
+  background-color: var(--primary--red);
+  border: none;
+  color: var(--main--white);
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: var(--dotes--red);
+  transform: scale(1.1);
+}
+
+.new {
+  background-color: var(--primary--blue);
+}
+
+.new:hover {
+  background-color: var(--second--blue);
+  transform: scale(1.1);
+}
