--- a/frontend/dad-jokes/src/app/home/home.component.html
+++ b/frontend/dad-jokes/src/app/home/home.component.html
@@ -3,8 +3,10 @@
   <div class="new-joke">
     <app-jokes></app-jokes>
   </div>
-  <h2 class="title">Favourites Jokes</h2>
+  <h2 class="title">Favorites Jokes</h2>
   <div class="fav">
-    <app-joke-list></app-joke-list>
+    <div class="fav-container">
+      <app-joke-list></app-joke-list>
+    </div>
   </div>
 </section>
