--- a/frontend/dad-jokes/src/app/joke-list/joke-list.component.html
+++ b/frontend/dad-jokes/src/app/joke-list/joke-list.component.html
@@ -1,3 +1,5 @@
-<ul>
-  <li>Favourite here</li>
-</ul>
+<div class="fav-container">
+  <ul>
+    <li *ngFor="let joke of data">{{ joke.joke }}</li>
+  </ul>
+</div>
